<resources>
    <string name="app_name">ModoApp</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="show_more_string"><![CDATA[<u>show more</u>]]></string>
    <string name="test"><u>show more</u></string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_header_title">User Name</string>
    <string name="nav_header_subtitle">user@google.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_logs">History Log</string>
    <string name="menu_reminders">Reminders</string>
    <string name="menu_manage_pills">Manage Pills</string>
    <string name="menu_share">Share Activity</string>
    <string name="menu_logout">Logout</string>

</resources>